fixed gap inconsistency

--- a/app/components/wallet/hwConnect/common/AboutDialog.scss
+++ b/app/components/wallet/hwConnect/common/AboutDialog.scss
@@ -34,7 +34,7 @@
 .middleAboutBlock {
   .prerequisiteBlock {
     display: inline-block;
-    padding-top: 30px;
+    margin-top: 16px;
     .prerequisiteHeaderText {
       font-family: var(--font-medium);
       margin-left: 7px;
